# RequirementsManager

./: CMakeLists.txt  EmscriptenApi.md  README.md
cmake/: external_projects.cmake  external_projects_native.cmake
docs/: PostgresSetup.md
examples/javascript/: BuildingATree.js  NodeToJson.js
examples/python/: LoadSaveDb.py
include/fr/: RequirementsManager.h
include/fr/RequirementsManager/: AllNodeTypes.h  CommitableNode.h  EmscriptenRestFactory.h  GraphNode.h  GraphNodeLocator.h  GraphServer.h  Node.h  NodeConnector.h  Organization.h  PistacheRestFactory.h  PqDatabase.h  PqDatabaseSpecific.h  PqNodeFactory.h  Product.h  Project.h  RemoveNodesNode.h  Requirement.h  RestFactoryApi.h  ServerLocatorNode.h  Story.h  TaskNode.h  ThreadPool.h  Todo.h  UseCase.h  UtilityNodes.h
include/fteng/: Readme.md
src/: CreateTables.cpp  EmscriptenApi.cpp  NodeConnector.cpp  RequirementsManagerPythonApi.cpp  RestService.cpp
test/: CMakeLists.txt  CommitableNodeTest.cpp  DatabaseTests.cpp  GraphNodeLocatorTest.cpp  NodeFactoryTests.cpp  NodeTest.cpp  OrganizationTest.cpp  ProjectTest.cpp  RequirementTest.cpp  TodoTest.cpp
